--- a/TicTacToeSDL/TicTacToeSDL/TicTacToeSDL.vcxproj
+++ b/TicTacToeSDL/TicTacToeSDL/TicTacToeSDL.vcxproj
@@ -75,8 +75,8 @@
     <LibraryPath>D:\Project\Include_Lib\SDL2-2.28.1\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\Project\Include_Lib\SDL2-2.28.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Project\Include_Lib\SDL2-2.28.1\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Project\Include_Lib\SDL2_image-2.6.3\include;D:\Project\Include_Lib\SDL2_mixer-2.6.3\include;D:\Project\Include_Lib\SDL2_ttf-2.20.2\include;D:\Project\Include_Lib\SDL2-2.28.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Project\Include_Lib\SDL2_image-2.6.3\lib\x86;D:\Project\Include_Lib\SDL2_mixer-2.6.3\lib\x86;D:\Project\Include_Lib\SDL2_ttf-2.20.2\lib\x86;D:\Project\Include_Lib\SDL2-2.28.1\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -88,7 +88,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2test.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2test.lib;SDL2_mixer.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -137,7 +137,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aNIMATION P.cpp" />
+    <ClCompile Include="demo.cpp" />
+    <ClCompile Include="Texture Module.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main2.cpp" />
+    <ClCompile Include="main3.cpp" />
+    <ClCompile Include="main4.cpp" />
+    <ClCompile Include="main6.cpp" />
+    <ClCompile Include="MainFile.cpp" />
+    <ClCompile Include="Scolingbg.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GLOBAL_DATA.h" />
+    <ClInclude Include="Texture_Module.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
