--- a/FlapyBird/FlapyBirdSDL/FlapyBirdSDL.vcxproj.filters
+++ b/FlapyBird/FlapyBirdSDL/FlapyBirdSDL.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Pipe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BackGround.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture_Module.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Pipe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BackGround.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
