--- a/FlapyBird/FlapyBirdSDL/FlapyBirdSDL.vcxproj
+++ b/FlapyBird/FlapyBirdSDL/FlapyBirdSDL.vcxproj
@@ -72,8 +72,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\Project\Include_Lib\SDL2-2.28.1\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Project\Include_Lib\SDL2-2.28.1\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Project\Include_Lib\SDL2_image-2.6.3\include;D:\Project\Include_Lib\SDL2_mixer-2.6.3\include;D:\Project\Include_Lib\SDL2-2.28.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Project\Include_Lib\SDL2_image-2.6.3\lib\x86;D:\Project\Include_Lib\SDL2_mixer-2.6.3\lib\x86;D:\Project\Include_Lib\SDL2-2.28.1\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>D:\Project\Include_Lib\SDL2_image-2.6.3\include;D:\Project\Include_Lib\SDL2_mixer-2.6.3\include;D:\Project\Include_Lib\SDL2_ttf-2.20.2\include;D:\Project\Include_Lib\SDL2-2.28.1\include;$(IncludePath)</IncludePath>
@@ -139,12 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BackGround.cpp" />
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="Texture Module.cpp" />
     <ClCompile Include="MainFile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BackGround.h" />
     <ClInclude Include="Bird.h" />
     <ClInclude Include="GLOBAL_DATA.h" />
     <ClInclude Include="Pipe.h" />
